# frore

./: .gitignore  LICENSE  frore.cabal
Graphics/Rendering/: Frore.hs
examples/: frore-example.hs  shader.frag  shader.vert  simple.frag
src/Graphics/Rendering/: Frore.hs
